# arrera_hub

./: .gitignore  Cargo.toml  arrera_hub.pro  hub_gui.h  readme.md  ressource.qrc  solution_install.md  todo.md
asset/theme/: theme_default.json
cli/: cli.pro  main.cpp
core/: hub.cpp  hub.h
gui/: gui.pro  hub_gui.cpp  hub_gui.ui  main.cpp
src/: config.rs  depots.rs  hub.rs  lib.rs  main.rs
src/arrera_hub/: arrera_hub.rs
src/config/: gest_index.rs  user_conf.rs
src/depots/: application.rs  gest_depots.rs  index.rs  install_app.rs  mod.rs  uninstall_app.rs
src/hub/: arrera_hub.rs
