[package]
name = "arrera_hub"
version = "0.0.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["json","blocking"] }
dirs = "5.0"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
once_cell = "1.21.3"
