[package]
name = "arrera_hub"
version = "0.0.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["json", "blocking", "stream"] }
dirs = "6.0.0"
rust-ini = "0.21.3"
chrono = "0.4.44"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
futures-util = "0.3.32"
zip = "8.2.0"
fs_extra = "1.3.0"

[target.'cfg(target_os = "windows")'.dependencies]
mslnk = "0.1"